--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev-server": "yarn run ts-node-dev --project ./tsconfig-server.json ./server/index.ts"
   },
   "devDependencies": {
+    "@types/clipboard": "^2.0.1",
     "@types/express": "^4.17.1",
     "@types/nanoid": "^2.0.0",
     "@types/node": "^12.7.8",
@@ -40,6 +41,7 @@
     "@types/react": "^16.9.3",
     "@types/react-dom": "^16.9.1",
     "@types/react-redux": "^7.1.4",
+    "clipboard": "^2.0.4",
     "express": "^4.17.1",
     "mecab-async": "^0.1.2",
     "react": "^16.9.0",
